--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- add the google maps source code -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.29&libraries=places,geometry"></script>
   </body>
 </html>
