--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- add the google maps source code -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.29&libraries=places,geometry"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=Function.prototype"
+      type="text/javascript"></script>
   </body>
 </html>
