worked with tutor to set up google API access and change my key

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
     -->
     <title>Capstone</title>
     <!-- add the google maps source code -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?&callback=Function.prototype"
-      type="text/javascript"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCte77X-YyyMzwq0o2xqO0BD77hqy7ekM&callback=initMap"
+type="text/javascript"></script>
+
 
   </head>
   <body>
