lat and lng are added to form wh user submits a name of a hike

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Capstone</title>
     <!-- add the google maps source code -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCte77X-YyyMzwq0o2xqO0BD77hqy7ekM&callback=initMap"
+<script async defer src="https://maps.googleapis.com/maps/api/js?&callback=initMap"
 type="text/javascript"></script>
 
 
