added google maps scrip with api key to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="sylesheet" href="/App.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCw5YSiONvYAvTazyjD0XBfkG7er1LaHiE&callback=initMap"
+    async defer></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
